documents that were valid with the 2010-07-07 schema release (version
1.0) may be invalid with this release.

** General

- separated common markup components into iati-common.xsd, to avoid
  duplication between the Organisations and Activities schemas; like
  xml.xsd, iati-common.xsd must be in the same directory as the
  principal schema

** Activities

- [backwards-incompatible] renamed contact-info/organization to
  contact-info/organisation

- [backwards-incompatible] make @code attribute mandatory for
  collaboration-type, default-flow-type, transaction/flow-type,
  default-aid-type, transaction/aid-type, default-finance-type,
  transaction/finance-type, default-tied-status,
  transaction/tied-status, policy-marker, and activity-status

- [backwards-incompatible] remove transaction/transaction-date/@type

- [backwards-incompatible] make @ref and @type mandatory for
  related-activity

- add optional iati-activity/@version attribute

- add new transaction/disbursement-channel element

- add new document-link element and subelements

- add new location element and subelements

- change structure of budget-planned/period-start and
  budget-planned/period-end so that content doesn't have to be an ISO
  date (and add optional @iso-date attribute)


** Organizations

- [backwards-incompatible] rename iati-organization to
  iati-organisation

- [backwards-incompatible] rename organization-website to
  organisation-website

- add optional iati-organisation/@version attribute

- add new document-link element and subelements


* 2010-07-07 Changes (version 1.0)

** Activities

- add xsd:any to most text content, to allow mixed-content
  extensibility (e.g. in text, description, etc.)

- add xsd:anyAttribute wherever possible

- change @ref to @code anywhere the attribute represents an enumerated
  list rather than the identifier of a business object:
  collaboration-type, (default-)flow-type, default-aid-type,
  transaction/aid-type, (default-)finance-type, sector,